[project]
name = "sweeping-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "python-telegram-bot>=21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "ty>=0.0.1a0",
]
