[project]
name = "sweeping-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "cachetools>=5.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "python-telegram-bot[job-queue]>=21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
